Correction FireFox

--- a/static/style.css
+++ b/static/style.css
@@ -267,7 +267,7 @@ footer .copyright li {
 
 .date {
     color: rgb(135,135,135);
-    width: 15%;
+    width: 16%;
     padding-left: 0;
     margin-left: 0;
 }
