--- a/static/style_claire.css
+++ b/static/style_claire.css
@@ -265,7 +265,7 @@ footer .copyright li {
 }
 
 .date {
-    width: 15%;
+    width: 16%;
     padding-left: 0;
     margin-left: 0;
 }
